tests/snapshots/core_lowering__surface2_id_body_stays_polymorphic.snap
---
source: tests/core_lowering.rs
expression: "pretty_typed(&core, &mut TyPrinter::new())"
---
(fn id (x) (var x : a))
