tests/snapshots/core_lowering__surface4_effect_row_rides_inline.snap
---
source: tests/core_lowering.rs
expression: "pretty_typed(&core, &mut TyPrinter::new())"
---
(fn worker () (app (var set : fn(Int) / {State(Int)} -> Unit) (lit 1 : Int) : Unit))
(fn use_it () (let g (var worker : fn() / {State(Int)} -> Unit) (app (var g : fn() / {State(Int)} -> Unit) : Unit) : Unit))
