tests/snapshots/core_lowering__surface6_match_node_is_int.snap
---
source: tests/core_lowering.rs
expression: "pretty_typed(&core, &mut TyPrinter::new())"
---
(fn m (o) (match (var o : Option(Int)) (None (lit 0 : Int)) (Some (x) (var x : Int)) : Int))
