tests/snapshots/core_lowering__surface7_nullary_ctor_carries_con.snap
---
source: tests/core_lowering.rs
expression: "pretty_typed(&core, &mut TyPrinter::new())"
---
(fn lin () (let t (var Tok : Tok) (var t : Tok) : Tok))
